added password variable length feature

--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
 </head>
 
 <body>
+    <input type="number" id="passwordLength"><br>
     <button class="btn">Generate</button>
     <h1 class="password"></h1>
+
 </body>
 <script src="./script.js"></script>
 
