added clear button, added styling, removed numbber input scrolling

--- a/index.html
+++ b/index.html
@@ -5,13 +5,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="text/stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./style.css" />
     <title>Password Generator</title>
 </head>
 
 <body>
-    <input type="number" id="passwordLength"><br>
+    <h1 class="heading">Password Generator</h1>
+    <input type="number" id="passwordLength" placeholder="Password Length"><br>
     <button class="btn">Generate</button>
+    <button class="btn" id="clear" onclick="window.location.reload()">Clear</button>
     <h1 class="password"></h1>
 
 </body>
