added clear button and copy to dashboard button. Also added some styling.

--- a/index.html
+++ b/index.html
@@ -5,13 +5,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/323eb520cf.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./style.css" />
     <title>Password Generator</title>
 </head>
 
 <body>
     <h1 class="heading">Password Generator</h1>
-    <input type="number" id="passwordLength" placeholder="Password Length"><br>
+    <input type="number" class="line" id="passwordLength" placeholder="Password Length"><br>
+    <button class="btn-copy" id="copy">
+        <i class="fa-solid fa-copy"></i>
+    </button>
     <button class="btn">Generate</button>
     <button class="btn" id="clear" onclick="window.location.reload()">Clear</button>
     <h1 class="password"></h1>
